--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,9 @@ repositories {
 
 dependencies {
     compile group: 'io.undertow', name: 'undertow-core', version: '1.4.0.CR3'
-    compile 'io.github.benas:random-beans:3.4.0'
     //compile group: 'io.undertow', name: 'undertow-servlet', version: '1.4.0.CR3'
-}
+    compile 'io.github.benas:random-beans:3.4.0'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'}
 
 
 //create a single Jar with all dependencies
